# atlas-ui-3

./: .bandit  .codeqlignore  .env.example  .env.otel.example  .gitignore  .gitlab-ci.yml  .semgrep.yml  AGENTS.md  AGENT_PORTAL_ACTION_PLAN.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile-test  Dockerfile.runtimeonly  GEMINI.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_SAMPLING.md  INVESTIGATION_unraisable_warning.md  RAG_update.md  README.md  SECURITY.md  _agent_setup.sh  agent_start.sh  agent_update_plan.md  alembic.ini  base-image-update-plan.md  docker-compose.yml  mcp_note.md  old_v1_mcp_note.md  prod-readme.md  ps_agent_start.ps1  pyproject.toml  requirements.txt  run_test_shortcut.sh  setup.py  v2_mcp_note.md
.claude/agents/: final-checklist-reviewer.md  git-worktree-setup.md  test-report-runner.md
.clinerules/: start.md
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml  release-checklist.md
.github/codeql/: codeql-config.yml  extensions.yml
.github/workflows/: build-artifacts.yml  ci.yml  pypi-publish.yml  quay-publish.yml  release-cut.yml  security.yml
alembic/: env.py
alembic/versions/: 001_initial_chat_history_schema.py  002_add_user_prompts.py
atlas/: .env.example  __init__.py  atlas_chat_cli.py  atlas_client.py  finetune_export_cli.py  init_cli.py  main.py  portal_cli.py  server_cli.py  version.py
atlas/agent_runner_v3/: Dockerfile  build_and_load.sh  runner.py
atlas/application/: __init__.py
atlas/config/: agent_portal.yaml  file-extractors.json  help.md  llmconfig.yml  mcp.json  splash-config.json  splash-screen.md
atlas/core/: agent_store.py  auth.py  authorization_manager.py  capabilities.py  cerbos_authz.py  cerbos_client.py  compliance.py  domain_whitelist.py  domain_whitelist_middleware.py  globus_auth.py  http_client.py  keycloak_client.py  log_sanitizer.py  metrics_logger.py  middleware.py  model_access.py  otel_config.py  prefect_agent_executor.py  prompt_risk.py  rate_limit_middleware.py  runtime_path_validation.py  security_headers_middleware.py  telemetry.py  user_identity.py
atlas/mcp/code-executor-v2/: Dockerfile  README.md  __init__.py  artifacts.py  config.py  file_ops.py  git_clone.py  main.py  pyproject.toml  session.py  state_store.py
atlas/mcp/code-executor-v2/sandbox/: __init__.py  _sandbox_launch_v2.py  kernel_probe.py  launcher.py
atlas/mcp/code-executor-v2/tests/: conftest.py  test_artifacts.py  test_file_ops.py  test_git_clone_redaction.py  test_kernel_probe.py  test_sandbox.py  test_session.py  test_upload_url_guard.py
backend/: atlas_chat_cli.py  atlas_client.py  cli.py  main.py  version.py
backend/mcp/poisoned-tool/: README.md  main.py  pyproject.toml
config/: mcp-authentication-examples.json
deploy/: docker-compose.prod.yml  nginx.conf  run.sh
docs/: 01_getting_started.md  02_admin_guide.md  03_developer_guide.md  04_cli.md  FILE_ACCESS_SOLUTION.md  IMPLEMENTATION_SUMMARY.md  README.md  REORGANIZATION.md  VTK_VISUALIZATION.md  advanced-features.md  agent-portal-architecture.md  agent-portal-experiment.md  agent_update.md  backend.md  compliance-level-feature.md  config-migration.md  custom-prompting.md  developer-setup.md  elicitation-issue-2025-01-07.md  error_flow_diagram.md  error_handling_improvements.md  file_library_implementation.md  frontend.md  issue-10-workflow-proposal.md  mcp-authentication-implementation.md  mcp-authentication.md  mcp-development.md  mcp-server-discoverability.md  mcp_progress_note.md  messages_types_to_ui.md  metrics-logging.md  refactoring-complete-summary.md  reviewer-feedback-implementation.md  service-refactor-plan.md  service-refactoring-progress.md  tool-approval-e2e-test-scenarios-2025-11-05.md  tool-approval-final-implementation.md  tool-approval-system.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  tailwind.config.js  vite.config.js  vitest.config.js
helm-chart/: Chart.yaml  values.yaml
mocks/banyan-extractor-mock/: README.md  banyan_extractor_service.py  endpoint_config.json.example  main.py  pyproject.toml  requirements.txt  run.sh
mocks/file-extractor-mock/: README.md  endpoint_config.json.example  main.py  pyproject.toml  requirements.txt  run.sh
mocks/mcp-http-mock/: BUILD_NOTES.md  DOCKER_K8S_DEPLOYMENT.md  Dockerfile  Dockerfile.fedora  Dockerfile.rhel  Dockerfile.ubuntu  QUICKSTART.md  QUICKSTART_FILE_ANALYSIS.md  README.md  build_and_test_dockerfiles.sh  docker-compose.yml  main.py  mcp-config-example.json  mcp-config.json  pyproject.toml  run.sh  test_file_analysis.py
mocks/mcp-http-mock/helm/mcp-server/: .helmignore  Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
mocks/mcp-http-mock/helm/mcp-server/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
mocks/multipart-extractor-mock/: README.md  multipart_extractor_mock.py  pyproject.toml  requirements.txt  run.sh  sample-file-extractors.json
mocks/wormhole-mcp-mock/: README.md  e2e_wormhole_test.py  main.py  mcp-config-example.json  pyproject.toml  run.sh  run_e2e.sh
prompts/: __init__.py  agent_reason_prompt.md  agent_system_prompt.md  system_prompt.md  tool_synthesis_prompt.md
scripts/: bad_chars.ps1  bundle-docs.sh  check-docs.sh  curl_api_config_shortcut.sh  debug_mcp_servers.py  demo_custom_prompts.py  demo_error_handling.py  download-dependencies.py  download-deps.py  generate_vtk_samples.py  git-branch-sync.sh  mcp_debug_info.json  s3-prune-old-files.sh  s3_prune_old_files.py  sync_package_assets.sh  tiff_vision_e2e_proof.py  tmux-3-agents.sh
test/: CONTAINERIZED_TESTING.md  OAUTH_E2E_TESTS.md  OAUTH_TESTING_QUICKSTART.md  README.md  atlas_tests.sh  backend_tests.sh  e2e_tests.sh  e2e_tests_live.sh  frontend_tests.sh  oauth_e2e_test.py  run_pr_validation.sh  run_tests.sh  simple_e2e_oauth_jwt_workflow.py  simple_e2e_test.py  test_cli_e2e.sh  test_mcp_api_key_e2e.py  test_pr271_cli_rag_features.sh
test_e2e/: README.md  package-lock.json  package.json  playwright.config.js
(+1254 files in other folders)
