[project]
name = "atlas-chat"
version = "0.1.4"
description = "Full-stack LLM chat interface with Model Context Protocol (MCP) integration"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Sandia National Laboratories" }
]
keywords = ["llm", "chat", "mcp", "ai", "anthropic", "openai", "gemini"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "cryptography",
    "duckdb-engine",
    "fastapi",
    "fastmcp>=3.0.0,<4.0.0",
    "httpx",
    "itsdangerous",
    "litellm>=1.81.14",
    "opentelemetry-api",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-instrumentation-logging",
    "opentelemetry-sdk",
    "psycopg2-binary",
    "pydantic",
    "PyJWT",
    "pytz",
    "python-dotenv",
    "python-multipart",
    "pyyaml",
    "requests",
    "sqlalchemy>=2.0",
    "uvicorn[standard]",
    "websockets",
]

[project.optional-dependencies]
mcp-demos = [
    "beautifulsoup4",
    "duckduckgo-search",
    "matplotlib",
    "numpy",
    "openpyxl",
    "pandas",
    "Pillow",
    "PyPDF2",
    "python-pptx",
    "reportlab",
    "scikit-learn",
    "scipy",
    "seaborn",
]
dev = [
    "alembic",
    "podman-compose",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "ruff",
]

[project.scripts]
atlas-chat = "atlas.atlas_chat_cli:main"
atlas-server = "atlas.server_cli:main"
atlas-init = "atlas.init_cli:main"

[project.urls]
Homepage = "https://github.com/sandialabs/atlas"
Documentation = "https://github.com/sandialabs/atlas/tree/main/docs"
Repository = "https://github.com/sandialabs/atlas"
Issues = "https://github.com/sandialabs/atlas/issues"

[dependency-groups]
mcp-demos = [
    "beautifulsoup4",
    "duckduckgo-search",
    "matplotlib",
    "numpy",
    "openpyxl",
    "pandas",
    "Pillow",
    "PyPDF2",
    "python-pptx",
    "reportlab",
    "scikit-learn",
    "scipy",
    "seaborn",
]
dev = [
    {include-group = "mcp-demos"},
    "alembic",
    "podman-compose",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "ruff",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["atlas*"]

[tool.setuptools.package-data]
atlas = [
    "*.md",
    "*.txt",
    ".env.example",
    "config/*.json",
    "config/*.yml",
    "config/mcp-example-configs/*.json",
    "mcp/**/*",
    "static/**/*",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
