[project]
name = "atlas-chat"
version = "0.1.5"
description = "Full-stack LLM chat interface with Model Context Protocol (MCP) integration"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Sandia National Laboratories" }
]
keywords = ["llm", "chat", "mcp", "ai", "anthropic", "openai", "gemini"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0,<2.0.0",
    "cryptography>=44.0.0,<49.0.0",
    "duckdb-engine>=0.17.0,<1.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "fastmcp[tasks]>=3.2.0,<4.0.0",
    "httpx>=0.27.0,<1.0.0",
    "itsdangerous>=2.0.0,<3.0.0",
    "litellm>=1.83.10,<2.0.0",
    "opentelemetry-api>=1.0.0,<2.0.0",
    "opentelemetry-exporter-otlp>=1.0.0,<2.0.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0,<1.0.0",
    "opentelemetry-instrumentation-httpx>=0.48b0,<1.0.0",
    "opentelemetry-instrumentation-logging>=0.48b0,<1.0.0",
    "opentelemetry-sdk>=1.0.0,<2.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "PyJWT>=2.0.0,<3.0.0",
    "pytz>=2024.1,<2027.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "requests>=2.31.0,<3.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "websockets>=13.0,<17.0.0",
]

[project.optional-dependencies]
# Keep in sync with [dependency-groups] mcp-demos below
mcp-demos = [
    "beautifulsoup4>=4.12.0,<5.0.0",
    "duckduckgo-search>=7.0.0,<9.0.0",
    "matplotlib>=3.8.0,<4.0.0",
    "numpy>=1.26.0,<3.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "pandas>=2.0.0,<4.0.0",
    "Pillow>=10.0.0,<13.0.0",
    "pypdf>=5.0.0,<7.0.0",
    "python-pptx>=0.6.21,<2.0.0",
    "reportlab>=4.0.0,<5.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "scipy>=1.11.0,<2.0.0",
    "seaborn>=0.13.0,<1.0.0",
]
dev = [
    "alembic>=1.13.0,<2.0.0",
    "podman-compose>=1.0.0,<2.0.0",
    "pytest>=8.0.0,<10.0.0",
    "pytest-asyncio>=0.23.0,<2.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "ruff>=0.4.0,<1.0.0",
]

[project.scripts]
atlas-chat = "atlas.atlas_chat_cli:main"
atlas-server = "atlas.server_cli:main"
atlas-init = "atlas.init_cli:main"
atlas-portal = "atlas.portal_cli:main"

[project.urls]
Homepage = "https://github.com/sandialabs/atlas"
Documentation = "https://github.com/sandialabs/atlas/tree/main/docs"
Repository = "https://github.com/sandialabs/atlas"
Issues = "https://github.com/sandialabs/atlas/issues"

[dependency-groups]
# Keep in sync with [project.optional-dependencies] mcp-demos above
mcp-demos = [
    "beautifulsoup4>=4.12.0,<5.0.0",
    "duckduckgo-search>=7.0.0,<9.0.0",
    "matplotlib>=3.8.0,<4.0.0",
    "numpy>=1.26.0,<3.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "pandas>=2.0.0,<4.0.0",
    "Pillow>=10.0.0,<13.0.0",
    "pypdf>=5.0.0,<7.0.0",
    "python-pptx>=0.6.21,<2.0.0",
    "reportlab>=4.0.0,<5.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "scipy>=1.11.0,<2.0.0",
    "seaborn>=0.13.0,<1.0.0",
]
dev = [
    {include-group = "mcp-demos"},
    "alembic>=1.13.0,<2.0.0",
    "podman-compose>=1.0.0,<2.0.0",
    "pytest>=8.0.0,<10.0.0",
    "pytest-asyncio>=0.23.0,<2.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "ruff>=0.4.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["atlas*"]

[tool.setuptools.package-data]
atlas = [
    "*.md",
    "*.txt",
    ".env.example",
    "config/*.json",
    "config/*.yml",
    "config/mcp-example-configs/*.json",
    "mcp/**/*",
    "static/**/*",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
