[project]
name = "banyan-extractor-mock"
version = "0.1.0"
description = "Banyan Extractor Mock Service for ATLAS testing"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.44.0,<1.0.0",
    "banyan-extract[nemotronparse] @ git+https://github.com/sandialabs/banyan-ingest.git@160e956a2fce342fbad990a2e667bafebef23260",
    "pdf2image>=1.17.0,<2.0.0",
    "pypdf>=5.0.0,<7.0.0",
]

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"
