[project]
name = "file-extractor-mock"
version = "0.1.0"
description = "Mock File Extractor Service for ATLAS testing"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3,<1.0.0",
    "uvicorn>=0.32.0,<1.0.0",
    "pypdf>=6.10.0,<7.0.0",
]

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"
