[project]
name = "wormhole-mcp-mock"
version = "0.1.0"
description = "Wormhole-enabled MCP mock server for ATLAS issue #640 E2E testing"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.1.0,<4.0.0",
]

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"
